--- a/ux.html
+++ b/ux.html
@@ -222,11 +222,11 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/homex/5844df51-76a5-4831-b695-4ae808930cfa'>HomeX - Senior Content Lead (Marketing + UX)</a></h5> 
+<h5><a href='https://jobs.lever.co/homex/5844df51-76a5-4831-b695-4ae808930cfa'>HomeX - Senior Content Lead (Marketing + UX)</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/homex/9a8d0a87-8739-4d6e-9cd0-a94e69e175d1'>HomeX - Senior Content Lead (Marketing + UX)</a></h5> 
+<h5><a href='https://jobs.lever.co/homex/9a8d0a87-8739-4d6e-9cd0-a94e69e175d1'>HomeX - Senior Content Lead (Marketing + UX)</a></h5> 
 <p><span class="badge badge-light">Toronto, ON</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -264,7 +264,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://endios.join.com/jobs/263747-ui-ux-designer-m-w-d-ab-sofort-vollzeit-unbefristet'>Job @ endios (Hamburg): UI-/UX-Designer (m/w/d) ab... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://endios.join.com/jobs/263747-ui-ux-designer-m-w-d-ab-sofort-vollzeit-unbefristet'>Job @ endios (Hamburg): UI-/UX-Designer (m/w/d) ab... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -360,7 +360,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/270BD644A7'>CCRi - Jobs: Frontend Software Engineer - UI/UX Development and ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/270BD644A7'>CCRi - Jobs: Frontend Software Engineer - UI/UX Development and ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Are interested in data mining, analytics, and/or machine learning. We're looking 
 for candidates with solid technical foundations and a desire to continue learning.</p>
@@ -387,7 +387,7 @@ for candidates with solid technical foundations and a desire to continue learnin
 VERTRIEBSSPEZIALIST (M/W) in N?rnberg (published: 28.09.2018). Apply now 
 or check?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=quEaVfwX&k=Job&j=oCcAafwi&__jvst=Employee&__jvsd=sukUBhw5&__jvsc=Twitter&bid=nq6QPKwq&jvi=oCcAafwi,Job&jvk=Job'>TaskUs Careers - UX Designer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=quEaVfwX&k=Job&j=oCcAafwi&__jvst=Employee&__jvsd=sukUBhw5&__jvsc=Twitter&bid=nq6QPKwq&jvi=oCcAafwi,Job&jvk=Job'>TaskUs Careers - UX Designer</a></h5> 
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on:: 2019-07-22</p>
 <hr/>
@@ -435,7 +435,7 @@ or check?...</p>
 <p><span class="badge badge-light">Irvine California</span></p>
 <p>Posted on:: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vicis/f1b6c704-6e51-42bc-8f90-66999fe73c93'>VICIS - UX Designer</a></h5> 
+<h5><a href='https://jobs.lever.co/vicis/f1b6c704-6e51-42bc-8f90-66999fe73c93'>VICIS - UX Designer</a></h5> 
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
