--- a/statistics.html
+++ b/statistics.html
@@ -47,7 +47,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/sr-statistical-programmer-30233'>Sr Statistical Programmer - Syneos Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/sr-statistical-programmer-30233'>Sr Statistical Programmer - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -101,11 +101,11 @@ team regarding statistical methods for data analysis of clinical trials. Provide
 <p>4 days ago ... Provide input into Case Report Form (CRF) and Data Validation Specifications (
 DVS) development in all therapeutic areas; writing specifications for analysis?...</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oYrAafwT&__jvst=Employee+Referral&__jvsd=sUzQygwC&__jvsc=Twitter&bid=nPkHTKwY'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oYrAafwT&__jvst=Employee+Referral&__jvsd=sUzQygwC&__jvsc=Twitter&bid=nPkHTKwY'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oOrAafwJ&__jvst=Employee+Referral&__jvsd=sUzQygwC&__jvsc=Twitter&bid=npSsSKwQ'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oOrAafwJ&__jvst=Employee+Referral&__jvsd=sUzQygwC&__jvsc=Twitter&bid=npSsSKwQ'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
@@ -138,7 +138,7 @@ at BAME Recruitment Limited.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TTi1/743999687569952-senior-biostatistican'>TTi Senior Biostatistican | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/TTi1/743999687569952-senior-biostatistican'>TTi Senior Biostatistican | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -233,7 +233,7 @@ and ... and a good understanding of conversion data structure standards (SDTM)
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/alyvant/jobs/4206185002'>Job Application for Computational Statistician at Alyvant</a></h5> 
+<h5><a href='https://boards.greenhouse.io/alyvant/jobs/4206185002'>Job Application for Computational Statistician at Alyvant</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -405,7 +405,7 @@ support for the implementation of data models and the reporting of clinical tria
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/QuotientLimited/743999691337284-statistical-data-analyst'>Quotient Limited Statistical Data Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/QuotientLimited/743999691337284-statistical-data-analyst'>Quotient Limited Statistical Data Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Edinburgh</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
